--- a/file1.html
+++ b/file1.html
@@ -10,11 +10,11 @@
       <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/main.css" />
 </head>
 <body>
-      <table border="1" id="t1">
+      <table id="t1">
             <tr>
                   <th class="t11"><h1>facebook</h1></th>
                   <th>
-                        <table border="1" >
+                        <table>
                               <tr>
                                     <th>email or phone</th>
                               </tr>
@@ -24,7 +24,7 @@
                         </table>
                   </th>
                   <th>
-                        <table border="1">
+                        <table>
                               <tr>
                               <th>enter password</th>
                               </tr>
@@ -39,10 +39,10 @@
                   <th><button id="b1">login in</button></th>
             </tr>     
       </table>
-      <table border="1" id="t2">
+      <table id="t2">
             <tr>
                   <td>
-                      <table id="t2g" border="1">
+                      <table id="t2g" >
                             <tr id="par">
                             <td><p>Facebook helps you connect and share with the people in your life.</p></td>
                             </tr>
@@ -52,7 +52,7 @@
                       </table>
                   </td>
                   <td> 
-                        <table border="1" id="t22">
+                        <table id="t22">
                               <tr>
                                     <td><h1>Create an account</h1></td>
                               </tr>
@@ -61,7 +61,7 @@
                               </tr>
                               <tr>
                                     <td>
-                                          <table id="name" border="1">
+                                          <table id="name">
                                                 <tr>
                                                       <td><input type="text" placeholder="first name"></td>
                                                 </tr>
@@ -82,7 +82,7 @@
                               </tr>
                               <tr>
                                     <td>
-                                          <table id="date" border="1">
+                                          <table id="date">
                                                 <tr>
                                                       <td><input type="number" min="1" max="31" placeholder="day"></td>
                                                 </tr>
@@ -97,7 +97,7 @@
                               </tr>
                               <tr>
                                     <td>
-                                          <table id="fm" border="1">
+                                          <table id="fm">
                                                 <tr>
                                                       <td><input type="radio" name="gender" value="male">Male</td>
                                                 </tr>
