--- a/file1.html
+++ b/file1.html
@@ -78,7 +78,7 @@
                                     <td><input type="password" placeholder="password"></td>
                               </tr>
                               <tr>
-                                    <td>Birthday</td>
+                                    <td>Enter Your Birthday:</td>
                               </tr>
                               <tr>
                                     <td>
@@ -99,18 +99,18 @@
                                     <td>
                                           <table id="fm">
                                                 <tr>
-                                                      <td><input type="radio" name="gender" value="male">Male</td>
+                                                      <td><input type="radio" name="gender">Male</td>
                                                 </tr>
                                                 <tr>
-                                                      <td><input type="radio" name="gender"value="female">Female</td>
+                                                      <td><input type="radio" name="gender">Female</td>
                                                 </tr>
 
                                           </table>
                                     </td>
                               </tr>
                               <tr>
-                                    <td><small>clicking Sign Up, you agree to our Terms,</br>
-                                           Data Policy and Cookie Policy.</br>
+                                    <td><small>clicking Sign Up, you <b>agree</b> to our Terms,</br>
+                                           Data Policy and Cookie <i>Policy</i>.</br>
                                            You may receive SMS notifications from us and can opt out at any time.</small>
                                           </td>
                               </tr>
