--- a/file1.html
+++ b/file1.html
@@ -44,7 +44,7 @@
                   <td>
                       <table id="t2g" >
                             <tr id="par">
-                            <td><p>Facebook helps you connect and share with the people in your life.</p></td>
+                            <td><h1>Facebook helps you connect and share with the people in your life.</h1></td>
                             </tr>
                             <tr>
                                   <td><img id="img" src="./assets/img/GwFs3_KxNjS.png" alt="image"></td>
