--- a/file1.html
+++ b/file1.html
@@ -12,7 +12,7 @@
 <body>
       <table id="t1">
             <tr>
-                  <th class="t11"><h1>facebook</h1></th>
+                  <th id="t11"><h1>facebook</h1></th>
                   <th>
                         <table>
                               <tr>
@@ -109,7 +109,7 @@
                                     </td>
                               </tr>
                               <tr>
-                                    <td><small>clicking Sign Up, you <b>agree</b> to our Terms,</br>
+                                    <td id="ps"><small>clicking Sign Up, you <b>agree</b> to our Terms,</br>
                                            Data Policy and Cookie <i>Policy</i>.</br>
                                            You may receive SMS notifications from us and can opt out at any time.</small>
                                           </td>
