--- a/file1.html
+++ b/file1.html
@@ -14,7 +14,7 @@
             <tr>
                   <th id="t11"><h1>facebook</h1></th>
                   <th>
-                        <table>
+                        <table id="t111">
                               <tr>
                                     <th>email or phone</th>
                               </tr>
@@ -24,7 +24,7 @@
                         </table>
                   </th>
                   <th>
-                        <table>
+                        <table id="t1111">
                               <tr>
                               <th>enter password</th>
                               </tr>
@@ -42,9 +42,9 @@
       <table id="t2">
             <tr>
                   <td>
-                      <table id="t2g" >
-                            <tr id="par">
-                            <td><h1>Facebook helps you connect and share with the people in your life.</h1></td>
+                      <table id="t2g">
+                            <tr>
+                            <td id="par1"><h2>Facebook helps you connect and share with the people in your life.</h2></td>
                             </tr>
                             <tr>
                                   <td><img id="img" src="./assets/img/GwFs3_KxNjS.png" alt="image"></td>
