--- a/file1.html
+++ b/file1.html
@@ -121,6 +121,20 @@
                   </td>
             </tr>
       </table>
+      <footer>
+            
+                  <a href="#"><b>contact us</b></a></br>
+       <hr>
+            <div> 
+                  <p>W3Schools is optimized for learning, testing, and training.</br>
+                     Examples might be simplified to improve reading and basic understanding.</br>
+                     Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content.</br>
+                     While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy.</br>
+                     &copy;Copyright 1999-2018 by Refsnes Data.</br> All Rights Reserved.</br>
+                     Powered by W3.CSS.</p>
+            </div>
+      <hr>
+      </footer>
       <script src="./assets/javascript/main.js"></script>
 </body>
 
